{
  "version": 4,
  "terraform_version": "1.1.8",
  "serial": 39,
  "lineage": "715dc18e-8886-1034-0969-085e94be72c4",
  "resources": [
    {
      "module": "module.aws_fortigate_creation",
      "mode": "managed",
      "type": "aws_eip",
      "name": "FGTPublicIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05cbda9de4c34f170",
            "association_id": "eipassoc-01cdd41515683f5a2",
            "domain": "vpc",
            "id": "eipalloc-05cbda9de4c34f170",
            "instance": "i-0d091f340e8dc969c",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-0471ab7acc4a59d95",
            "private_dns": "ip-10-10-1-10.eu-west-1.compute.internal",
            "private_ip": "10.10.1.10",
            "public_dns": "ec2-52-208-173-81.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.208.173.81",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "data.local_file.privatesubnet_id",
            "data.local_file.publicsubnet_id",
            "module.aws_fortigate_creation.aws_iam_instance_profile.this",
            "module.aws_fortigate_creation.aws_iam_role.this",
            "module.aws_fortigate_creation.aws_instance.fgtvm",
            "module.aws_fortigate_creation.aws_network_interface.eth0",
            "module.aws_fortigate_creation.aws_network_interface.eth1",
            "module.aws_fortigate_creation.data.template_file.FortiGate"
          ]
        }
      ]
    },
    {
      "module": "module.aws_fortigate_creation",
      "mode": "managed",
      "type": "aws_instance",
      "name": "fgtvm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0788ecffa9d575080",
            "arn": "arn:aws:ec2:eu-west-1:633496432202:instance/i-0d091f340e8dc969c",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sdb",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-09a23993ed7023c9d",
                "volume_size": 30,
                "volume_type": "standard"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "FFT_Instance_Profile",
            "id": "i-0d091f340e8dc969c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "c5n.xlarge",
            "ipv6_address_count": 0,
            "key_name": "id_rsa",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0471ab7acc4a59d95"
              },
              {
                "delete_on_termination": false,
                "device_index": 1,
                "network_card_index": 0,
                "network_interface_id": "eni-02a3166345759f036"
              }
            ],
            "primary_network_interface_id": "eni-0471ab7acc4a59d95",
            "private_dns": "ip-10-10-1-10.eu-west-1.compute.internal",
            "private_ip": "10.10.1.10",
            "public_dns": "ec2-52-208-173-81.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.208.173.81",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-0c7d86c59f2dd197d",
                "volume_size": 2,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05b3f2f69aa46f040",
            "tags": {
              "Name": "FortiGateVM"
            },
            "tags_all": {
              "Name": "FortiGateVM"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0370828bb08ee707a",
              "sg-03b83e3e329251a62"
            ]
          },
          "dependencies": [
            "data.local_file.privatesubnet_id",
            "data.local_file.publicsubnet_id",
            "module.aws_fortigate_creation.aws_iam_instance_profile.this",
            "module.aws_fortigate_creation.aws_iam_role.this",
            "module.aws_fortigate_creation.aws_network_interface.eth0",
            "module.aws_fortigate_creation.aws_network_interface.eth1",
            "module.aws_fortigate_creation.data.template_file.FortiGate"
          ]
        }
      ]
    },
    {
      "module": "module.aws_fortigate_creation",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "eth0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:633496432202:network-interface/eni-0471ab7acc4a59d95",
            "attachment": [
              {
                "attachment_id": "eni-attach-02802d99657dd085c",
                "device_index": 0,
                "instance": "i-0d091f340e8dc969c"
              }
            ],
            "description": "fgtvm-port1",
            "id": "eni-0471ab7acc4a59d95",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0a:98:30:7b:04:cd",
            "owner_id": "633496432202",
            "private_dns_name": "ip-10-10-1-10.eu-west-1.compute.internal",
            "private_ip": "10.10.1.10",
            "private_ip_list": [
              "10.10.1.10"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.10.1.10"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0370828bb08ee707a",
              "sg-03b83e3e329251a62"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05b3f2f69aa46f040"
          },
          "dependencies": [
            "data.local_file.publicsubnet_id"
          ]
        }
      ]
    },
    {
      "module": "module.aws_fortigate_creation",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "eth1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:633496432202:network-interface/eni-02a3166345759f036",
            "attachment": [
              {
                "attachment_id": "eni-attach-0f772516f1ebd8847",
                "device_index": 1,
                "instance": "i-0d091f340e8dc969c"
              }
            ],
            "description": "fgtvm-port2",
            "id": "eni-02a3166345759f036",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0a:ae:83:14:3c:c3",
            "owner_id": "633496432202",
            "private_dns_name": "ip-10-10-2-10.eu-west-1.compute.internal",
            "private_ip": "10.10.2.10",
            "private_ip_list": [
              "10.10.2.10"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.10.2.10"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-03b83e3e329251a62",
              "sg-0bf4aa184e6950861"
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0dbc8ac8d820bd149"
          },
          "dependencies": [
            "data.local_file.privatesubnet_id"
          ]
        }
      ]
    },
    {
      "module": "module.aws_fortigate_creation",
      "mode": "managed",
      "type": "aws_route",
      "name": "internalroute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0acbe7a85387b7e541080289494",
            "instance_id": "i-0d091f340e8dc969c",
            "instance_owner_id": "633496432202",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "eni-02a3166345759f036",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0acbe7a85387b7e54",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.local_file.fgtvmprivatert_id",
            "data.local_file.privatesubnet_id",
            "data.local_file.publicsubnet_id",
            "module.aws_fortigate_creation.aws_iam_instance_profile.this",
            "module.aws_fortigate_creation.aws_iam_role.this",
            "module.aws_fortigate_creation.aws_instance.fgtvm",
            "module.aws_fortigate_creation.aws_network_interface.eth0",
            "module.aws_fortigate_creation.aws_network_interface.eth1",
            "module.aws_fortigate_creation.data.template_file.FortiGate"
          ]
        }
      ]
    },
    {
      "module": "module.aws_fortiweb_creation",
      "mode": "managed",
      "type": "aws_instance",
      "name": "fweb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0081159a78a9b033d",
            "arn": "arn:aws:ec2:eu-west-1:633496432202:instance/i-0b0fcb7ea563b9a9c",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sdb",
                "encrypted": false,
                "iops": 0,
                "snapshot_id": "snap-01ec0a98cdc4aa662",
                "throughput": 0,
                "volume_id": "vol-041afa631d53faeb0",
                "volume_size": 30,
                "volume_type": "standard"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b0fcb7ea563b9a9c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "c5.large",
            "ipv6_address_count": 0,
            "key_name": "id_rsa",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0a8e72428ee8b2cdc"
              }
            ],
            "primary_network_interface_id": "eni-0a8e72428ee8b2cdc",
            "private_dns": "ip-10-10-2-11.eu-west-1.compute.internal",
            "private_ip": "10.10.2.11",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-0ecd141b6f749eb0c",
                "volume_size": 2,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0dbc8ac8d820bd149",
            "tags": {
              "Name": "FortiWebVM"
            },
            "tags_all": {
              "Name": "FortiWebVM"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03b83e3e329251a62",
              "sg-0bf4aa184e6950861"
            ]
          },
          "dependencies": [
            "module.aws_fortiweb_creation.aws_network_interface.eth2",
            "module.aws_fortiweb_creation.data.template_file.FortiWeb"
          ]
        }
      ]
    },
    {
      "module": "module.aws_fortiweb_creation",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "eth2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:633496432202:network-interface/eni-0a8e72428ee8b2cdc",
            "attachment": [
              {
                "attachment_id": "eni-attach-03b31dc346d2474b9",
                "device_index": 0,
                "instance": "i-068ee86e433c08f3c"
              }
            ],
            "description": "fweb-port1",
            "id": "eni-0a8e72428ee8b2cdc",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0a:2b:f8:33:25:df",
            "owner_id": "633496432202",
            "private_dns_name": "ip-10-10-2-11.eu-west-1.compute.internal",
            "private_ip": "10.10.2.11",
            "private_ip_list": [
              "10.10.2.11"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.10.2.11"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-03b83e3e329251a62",
              "sg-0bf4aa184e6950861"
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0dbc8ac8d820bd149"
          },
          "dependencies": [
            "data.local_file.privatesubnet_id"
          ]
        }
      ]
    },
    {
      "module": "module.aws_network_creation",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "fgtvmigw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:633496432202:internet-gateway/igw-03c59f8db98545152",
            "id": "igw-03c59f8db98545152",
            "owner_id": "633496432202",
            "tags": {
              "Name": "fgtvm-igw"
            },
            "tags_all": {
              "Name": "fgtvm-igw"
            },
            "vpc_id": "vpc-046fab49178b09f9b"
          },
          "dependencies": [
            "module.aws_vpc_creation.aws_vpc.fgtvm-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_network_creation",
      "mode": "managed",
      "type": "aws_route",
      "name": "externalroute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-03c59f8db98545152",
            "id": "r-rtb-04c8ca980e094212f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04c8ca980e094212f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_network_creation.aws_internet_gateway.fgtvmigw",
            "module.aws_network_creation.aws_route_table.fgtvmpublicrt",
            "module.aws_vpc_creation.aws_vpc.fgtvm-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_network_creation",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "fgtvmprivatert",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:633496432202:route-table/rtb-0acbe7a85387b7e54",
            "id": "rtb-0acbe7a85387b7e54",
            "owner_id": "633496432202",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "i-0d091f340e8dc969c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "eni-02a3166345759f036",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "fgtvm-private-rt"
            },
            "tags_all": {
              "Name": "fgtvm-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-046fab49178b09f9b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc_creation.aws_vpc.fgtvm-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_network_creation",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "fgtvmpublicrt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:633496432202:route-table/rtb-04c8ca980e094212f",
            "id": "rtb-04c8ca980e094212f",
            "owner_id": "633496432202",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03c59f8db98545152",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "fgtvm-public-rt"
            },
            "tags_all": {
              "Name": "fgtvm-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-046fab49178b09f9b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc_creation.aws_vpc.fgtvm-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_network_creation",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "internalassociate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03e21b0dc71eacc7a",
            "route_table_id": "rtb-0acbe7a85387b7e54",
            "subnet_id": "subnet-0dbc8ac8d820bd149"
          },
          "dependencies": [
            "data.local_file.privatesubnet_id",
            "module.aws_network_creation.aws_route_table.fgtvmprivatert",
            "module.aws_vpc_creation.aws_vpc.fgtvm-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_network_creation",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public1associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eacd4031ab6b1af4",
            "route_table_id": "rtb-04c8ca980e094212f",
            "subnet_id": "subnet-05b3f2f69aa46f040"
          },
          "dependencies": [
            "data.local_file.publicsubnet_id",
            "module.aws_network_creation.aws_route_table.fgtvmpublicrt",
            "module.aws_vpc_creation.aws_vpc.fgtvm-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_network_creation",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:633496432202:security-group/sg-0370828bb08ee707a",
            "description": "Allow all traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0370828bb08ee707a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "Allow All",
            "name_prefix": "",
            "owner_id": "633496432202",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Public Allow"
            },
            "tags_all": {
              "Name": "Public Allow"
            },
            "timeouts": null,
            "vpc_id": "vpc-046fab49178b09f9b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc_creation.aws_vpc.fgtvm-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_network_creation",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_allow",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:633496432202:security-group/sg-0bf4aa184e6950861",
            "description": "Public Allow traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bf4aa184e6950861",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ESP_No_NAT",
                "from_port": 500,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 500
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ESP_With_NAT",
                "from_port": 4500,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 4500
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Public Allow",
            "name_prefix": "",
            "owner_id": "633496432202",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Public Allow"
            },
            "tags_all": {
              "Name": "Public Allow"
            },
            "timeouts": null,
            "vpc_id": "vpc-046fab49178b09f9b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc_creation.aws_vpc.fgtvm-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc_creation",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privatesubnetaz1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:633496432202:subnet/subnet-0dbc8ac8d820bd149",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dbc8ac8d820bd149",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "633496432202",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "AWS-Protected-Network"
            },
            "tags_all": {
              "Name": "AWS-Protected-Network"
            },
            "vpc_id": "vpc-046fab49178b09f9b"
          },
          "dependencies": [
            "module.aws_vpc_creation.aws_vpc.fgtvm-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc_creation",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicsubnetaz1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:633496432202:subnet/subnet-05b3f2f69aa46f040",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05b3f2f69aa46f040",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "633496432202",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "AWS-Unprotected-Network"
            },
            "tags_all": {
              "Name": "AWS-Unprotected-Network"
            },
            "vpc_id": "vpc-046fab49178b09f9b"
          },
          "dependencies": [
            "module.aws_vpc_creation.aws_vpc.fgtvm-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc_creation",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "fgtvm-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:633496432202:vpc/vpc-046fab49178b09f9b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0ffe3098a76b1a77c",
            "default_route_table_id": "rtb-03d91915e9fa44b22",
            "default_security_group_id": "sg-03b83e3e329251a62",
            "dhcp_options_id": "dopt-017f0975aa9997fa2",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-046fab49178b09f9b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03d91915e9fa44b22",
            "owner_id": "633496432202",
            "tags": {
              "Name": "FFT-Public-Cloud"
            },
            "tags_all": {
              "Name": "FFT-Public-Cloud"
            }
          }
        }
      ]
    },
    {
      "module": "module.aws_webserver_creation",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-096f8c32c1df88f22",
            "arn": "arn:aws:ec2:eu-west-1:633496432202:instance/i-0a7627a2be4d20e87",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a7627a2be4d20e87",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "id_rsa",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0c26a6d6927212524"
              }
            ],
            "primary_network_interface_id": "eni-0c26a6d6927212524",
            "private_dns": "ip-10-10-2-12.eu-west-1.compute.internal",
            "private_ip": "10.10.2.12",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0629957ef4c318f25",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0dbc8ac8d820bd149",
            "tags": {
              "Name": "Web-Server"
            },
            "tags_all": {
              "Name": "Web-Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "Web-Server"
            },
            "vpc_security_group_ids": [
              "sg-03b83e3e329251a62",
              "sg-0bf4aa184e6950861"
            ]
          },
          "dependencies": [
            "data.local_file.privatesubnet_id",
            "module.aws_webserver_creation.aws_network_interface.eth3"
          ]
        }
      ]
    },
    {
      "module": "module.aws_webserver_creation",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "eth3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:633496432202:network-interface/eni-0c26a6d6927212524",
            "attachment": [
              {
                "attachment_id": "eni-attach-0df059fe7f63791b5",
                "device_index": 0,
                "instance": "i-0a7627a2be4d20e87"
              }
            ],
            "description": "Web-Server-port1",
            "id": "eni-0c26a6d6927212524",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0a:46:07:68:c2:f5",
            "owner_id": "633496432202",
            "private_dns_name": "ip-10-10-2-12.eu-west-1.compute.internal",
            "private_ip": "10.10.2.12",
            "private_ip_list": [
              "10.10.2.12"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.10.2.12"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-03b83e3e329251a62",
              "sg-0bf4aa184e6950861"
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0dbc8ac8d820bd149"
          },
          "dependencies": [
            "data.local_file.privatesubnet_id"
          ]
        }
      ]
    }
  ]
}